--- a/index.css
+++ b/index.css
@@ -102,3 +102,23 @@ button:focus {
 :root {
   font-family: Helvetica, Arial, sans-serif;
 }
+
+html {
+  font-size: 175%;
+  font-weight: 300;
+  line-height: 1.3;
+}
+
+body {
+  height: 100vh;
+}
+
+#main {
+  border-radius: 12px;
+  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  max-width: 15em;
+  overflow: hidden;
+}
