--- a/index.css
+++ b/index.css
@@ -110,7 +110,7 @@ html {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #main {
@@ -118,8 +118,8 @@ body {
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2em;
-  max-width: 15em;
+  min-width: 90vmin;
+  max-width: 13em;
   overflow: hidden;
 }
 
@@ -131,9 +131,66 @@ body {
 }
 
 .input-screen {
-  font-size: 1.714285714em;
+  font-size: 1.3em;
 }
 
 .output-screen {
   border-top: 1px solid #fff;
+}
+
+.buttons {
+  background-color: #000;
+  display: grid;
+  grid-gap: 1px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.btn {
+  background-color: #fff;
+  position: relative;
+  text-align: center;
+}
+
+.btn:active::before {
+  content: '';
+  background-color: rgba(0, 0, 0, 0.2);
+  bottom: 0;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
+  opacity: 0.3;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.operator {
+  background-color: #eee;
+}
+
+button[value='='] {
+  background-image: linear-gradient(to bottom, #fe886a, #ff7033);
+  grid-column: -2;
+  grid-row: 2 / span 4;
+}
+
+/* Global Classes */
+.flex {
+  display: flex;
+}
+
+.v-center {
+  align-items: center;
+}
+
+@media only screen and (min-width: 500px) {
+  #main {
+    min-width: inherit;
+  }
+  .input-screen {
+    font-size: 1.714285714em;
+  }
+  .btn {
+    padding: 0.5em 1.25em;
+  }
 }
