--- a/index.css
+++ b/index.css
@@ -189,6 +189,18 @@ body {
   align-items: center;
 }
 
+.row-2 {
+  grid-row: 2;
+}
+.row-3 {
+  grid-row: 3;
+}
+.row-4 {
+  grid-row: 4;
+}
+.row-5 {
+  grid-row: 5;
+}
 @media only screen and (min-width: 500px) {
   #main {
     min-width: inherit;
