--- a/index.css
+++ b/index.css
@@ -180,6 +180,11 @@ body {
   grid-row: 2 / span 4;
 }
 
+.remove {
+  grid-row: 5;
+  grid-column: 3;
+}
+
 /* Global Classes */
 .flex {
   display: flex;
@@ -189,18 +194,6 @@ body {
   align-items: center;
 }
 
-.row-2 {
-  grid-row: 2;
-}
-.row-3 {
-  grid-row: 3;
-}
-.row-4 {
-  grid-row: 4;
-}
-.row-5 {
-  grid-row: 5;
-}
 @media only screen and (min-width: 500px) {
   #main {
     min-width: inherit;
