--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -83,6 +85,8 @@ button {
   font-family: inherit;
   font-weight: inherit;
   outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
   text-align: left;
 }
@@ -116,6 +120,7 @@ body {
 
 #main {
   border-radius: 12px;
+  -webkit-box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
   margin-left: auto;
   margin-right: auto;
@@ -146,8 +151,10 @@ body {
 
 .buttons {
   background-color: #000;
+  display: -ms-grid;
   display: grid;
   grid-gap: 1px;
+  -ms-grid-columns: 1fr 1px 1fr 1px 1fr 1px 1fr;
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -161,6 +168,7 @@ body {
   content: '';
   background-color: rgba(0, 0, 0, 0.2);
   bottom: 0;
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
   opacity: 0.3;
   position: absolute;
@@ -175,22 +183,39 @@ body {
 }
 
 .equal {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#fe886a),
+    to(#ff7033)
+  );
+  background-image: -webkit-linear-gradient(top, #fe886a, #ff7033);
+  background-image: -o-linear-gradient(top, #fe886a, #ff7033);
   background-image: linear-gradient(to bottom, #fe886a, #ff7033);
   grid-column: -2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 4;
   grid-row: 2 / span 4;
 }
 
 .remove {
+  -ms-grid-row: 5;
   grid-row: 5;
+  -ms-grid-column: 3;
   grid-column: 3;
 }
 
 /* Global Classes */
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .v-center {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
